# blog

./: README.md
api_axum/: README.md
axum-tutorial/: README.MD
axum_crud_api/: Cargo.toml  README.md
axum_crud_api/migrations/: 20220816020517_task.sql
axum_crud_api/src/: errors.rs  main.rs
axum_crud_api/src/controllers/: task.rs
axum_crud_api/src/models/: task.rs
axum_getting_started/: Cargo.toml  README.md
axum_getting_started/src/: main.rs
axum_getting_started/static/: hello.html
axum_tutorial/: Cargo.toml
axum_tutorial/src/: main.rs
blacksheep_tutorial/: README.md  app.py  main.py  piccolo_conf.py  requirements.txt
blacksheep_tutorial/sql_app/: piccolo_app.py  tables.py
blacksheep_tutorial/sql_app/piccolo_migrations/: 2022-06-04T17-09-41-748757.py
cockroachdbGorillaMux/: README.MD  go.mod  go.sum  handlers.go  main.go  server.go
cockroachdbGorillaMux/model/: database.go  model.go
django_authentication/: README.md  db.sqlite3  manage.py
django_authentication/django_authentication/: asgi.py  settings.py  urls.py  wsgi.py
django_authentication/user_auth/: urls.py  views.py
django_authentication/user_auth/templates/user_auth/: base.html  home.html
django_authentication/user_auth/templates/user_auth/registration/: form.html  form_base.html  login.html  loginView.html  password_change_form.html  signup.html
url-shortener/: Cargo.toml
url-shortener/src/: lib.rs
url-shortnr/: Cargo.toml  README.md
url-shortnr/migrations/: 20220816231653_url-shortnr.sql
url-shortnr/src/: lib.rs
wheat_scraper/: README.MD  main.py
