[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shuttle-service = { version = "0.3.3", features = ["web-axum", "sqlx-postgres"] }
axum = "0.5.9"
serde = "1.0.137"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres"] }
sync_wrapper = "0.1"
nanoid = "0.4"
url ="2.2"